# cryptocurrency-market-prediction-project

./: .gitignore  README.md  docker-compose.yml
airflow/: Dockerfile  README.md  docker-compose.yaml  requirements.txt
airflow/dags/: utils.py
backend-fastapi/: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  requirements.txt  test_main.py
backend-fastapi/alembic/: env.py
backend-fastapi/models/: asset.py  exchange.py  indicator.py  models.py  price.py  priceCrypto.py  priceIndicator.py
backend-fastapi/routers/: PriceCrypto.py  asset.py  exchange.py  indicator.py  predict.py  price.py
backend-fastapi/schemas/: asset.py  exchange.py  indicator.py  price.py  priceCrypto.py
backend-fastapi/services/: asset.py  exchange.py  indicator.py  predict.py  price.py  priceCrypto.py  utils.py
data-analysis/: dataset_eda.ipynb  keras_exploration.ipynb
data-loader/: Create assets.ipynb  README.md  binance_extract.py  building_final_dataset.ipynb  comodities.ipynb  create.ipynb  full_build.ipynb  get_data.ipynb  get_data_from_source.ipynb  indicators.ipynb  prueba.csv  pruebas_predict.ipynb  pyproject.toml  rawcommodities_loader.ipynb  requirements.txt  requirements2.txt  utils.py
data-loader/Binance/BTCUSDT/: historic_day.py
data-prediction/: README.md
data-prediction/test/: Untitled.ipynb
data_science/: to dos.txt
data_science/building-our-data/: Build the final Dataset.ipynb  binance_extract.py
data_science/data-analysis/: Clean-Copy1.ipynb  Clean.ipynb  First Models.ipynb  (+4 more)
frontend-streamlit/: Dockerfile  main.py  requirements.txt
(+234 files in other folders)
