[tool.poetry]
name = "data-loader"
version = "0.1.0"
description = ""
authors = ["Julianjuyo <je.oliverosf@uniandes.edu.co>"]
readme = "README.md"
packages = [{include = "data_loader"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
